--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,12 +11,36 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-    <div class="container-fluid">
-        <!-- Header -->
-        <div class="header">
-            <h1><i class="fas fa-notes-medical"></i> Prontuários</h1>
+    <!-- Header -->
+    <header class="header">
+        <div class="header-content">
+            <div class="header-left">
+                <i data-feather="settings"></i>
+                <h1>FASIODONTO</h1>
+            </div>
+        </div>
+    </header>
+
+    <!-- Sidebar -->
+    <aside class="sidebar">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#" class="nav-item active">
+                        <i class="fas fa-notes-medical"></i>
+                        <span>Prontuários</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
+
+    <!-- Main Content -->
+    <main class="main-content">
+        <div class="content-header">
             <button class="btn btn-light" onclick="carregarPrescricoes()">
                 <i class="fas fa-sync-alt"></i> Atualizar
             </button>
@@ -32,7 +56,7 @@
             <h4 class="text-muted">Nenhum prontuário encontrado</h4>
             <p class="text-muted">Não há prontuários temporários no momento.</p>
         </div>
-    </div>
+    </main>
 
     <!-- Modal Visualizar -->
     <div class="modal fade" id="modalVisualizar" tabindex="-1">
@@ -185,5 +209,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="js/app.js"></script>
+    <script>
+        feather.replace();
+    </script>
 </body>
 </html>
