atualizações sobre filtragem de procedimentos

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -123,25 +123,25 @@
         </div>
     </div>
 
-    <!-- Modal Editar -->
+    <!-- Modal Prescrever (antigo Editar) -->
     <div class="modal fade" id="modalEditar" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title"><i class="fas fa-edit"></i> Editar Prontuário</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <div class="modal-header bg-success text-white">
+                    <h5 class="modal-title"><i class="fas fa-prescription"></i> Prescrever</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
                     <input type="hidden" id="editId">
                     <div class="mb-3">
-                        <label class="form-label">Descrição:</label>
-                        <textarea class="form-control" id="editDescricao" rows="5"></textarea>
+                        <label class="form-label">Prescrição:</label>
+                        <textarea class="form-control" id="editDescricao" rows="8" placeholder="Digite a prescrição médica..."></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary" onclick="enviarEdicao()">
-                        <i class="fas fa-save"></i> Salvar
+                    <button type="button" class="btn btn-success" onclick="enviarEdicao()">
+                        <i class="fas fa-save"></i> Salvar Prescrição
                     </button>
                 </div>
             </div>
